--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@smastrom/react-rating": "^1.3.1",
     "@tanstack/react-query": "^4.29.12",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
